Fix width of textarea with overflow hidden including scrollbar thickness https://bugs.webkit.org/show_bug.cgi?id=256697

Reviewed by Alan Baradlay.

This no longer includes the scrollbar thickness in the textarea width
when overflow is hidden or clip. This matches Firefox's behaviour.

* LayoutTests/platform/gtk/fast/forms/basic-textareas-expected.png:
* LayoutTests/platform/gtk/fast/forms/basic-textareas-expected.txt:
* LayoutTests/platform/gtk/fast/forms/basic-textareas-quirks-expected.png:
* LayoutTests/platform/gtk/fast/forms/basic-textareas-quirks-expected.txt:
* LayoutTests/platform/ios-wk2/fast/forms/basic-textareas-quirks-expected.txt:
* LayoutTests/platform/ios/fast/forms/basic-textareas-expected.txt:
* LayoutTests/platform/ios/fast/forms/basic-textareas-quirks-expected.txt:
* LayoutTests/platform/mac/fast/forms/basic-textareas-expected.png:
* LayoutTests/platform/mac/fast/forms/basic-textareas-expected.txt:
* LayoutTests/platform/mac/fast/forms/basic-textareas-quirks-expected.png:
* LayoutTests/platform/mac/fast/forms/basic-textareas-quirks-expected.txt:
* Source/WebCore/rendering/RenderTextControlMultiLine.cpp:
(WebCore::RenderTextControlMultiLine::preferredContentLogicalWidth const):

Canonical link: https://commits.webkit.org/264095@main